tests/compiler/errors/selective_import_global_dependency.casa
# expect: INVALID_VARIABLE
import "../fixtures/selective_import_global_lib.casa" { read_state }

read_state
